# 100-Elo-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  blitz.sh  helpers.cxx  helpers.hxx  main.cxx  pst.cxx  pst.hxx  search.cxx  search.hxx  settings.cxx  settings.hxx  sprt.sh  tt.hxx  uci.cxx  uci.hxx
src/: board.cxx  board.hxx  evaluate.cxx  evaluate.hxx  helpers.cxx  helpers.hxx  main.cxx  pst.cxx  pst.hxx  search.cxx  search.hxx  settings.cxx  settings.hxx  tt.cxx  tt.hxx  uci.cxx  uci.hxx
